refactor: add total employer cost calculation to payroll run